php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #70963 Unserialize shows UNKNOW in result
Submitted: 2015-11-24 02:53 UTC Modified: -
From: laruence@php.net Assigned:
Status: Closed Package: *General Issues
PHP Version: 7.0.0RC7 OS:
Private report: No CVE-ID: None
 [2015-11-24 02:53 UTC] laruence@php.net
Description:
------------
Unserialize shows UNKNOW in result

Test script:
---------------
var_dump(unserialize('a:2:{i:0;O:9:"exception":1:{s:16:"'."\0".'Exception'."\0".'trace";s:4:"test";}i:1;R:3;}'));

Expected result:
----------------
no UNKNOW

Actual result:
--------------
array(2) {
  [0]=>
  object(Exception)#1 (6) {
    ["message":protected]=>
    string(0) ""
    ["string":"Exception":private]=>
    string(0) ""
    ["code":protected]=>
    int(0)
    ["file":protected]=>
    string(10) "/tmp/1.php"
    ["line":protected]=>
    int(2)
    ["trace":"Exception":private]=>
    &UNKNOWN:0
  }
  [1]=>
  &UNKNOWN:0
}

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-11-24 03:05 UTC] laruence@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=91fb1edbbffe106d02929fe554ecbd1e5e33f5d1
Log: Fixed bug #70963 (Unserialize shows UNKNOW in result)
 [2015-11-24 03:05 UTC] laruence@php.net
-Status: Open +Status: Closed
 [2015-11-24 03:06 UTC] laruence@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=91fb1edbbffe106d02929fe554ecbd1e5e33f5d1
Log: Fixed bug #70963 (Unserialize shows UNKNOW in result)
 [2015-11-25 02:21 UTC] ab@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=aa4747c407e07b8d0b297f44c4ea7835b76fd58d
Log: Fixed bug #70963 (Unserialize shows UNKNOW in result)
 [2016-07-20 11:35 UTC] davey@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=91fb1edbbffe106d02929fe554ecbd1e5e33f5d1
Log: Fixed bug #70963 (Unserialize shows UNKNOW in result)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 13:00:02 2026 UTC