Fixed bug #70963 (Unserialize shows UNKNOW in result)

Thanks to ryat for reportinig